--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.56MB/s(Youtube:不良林), server: 116.129.254.177, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-1.72MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-2.01MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.82MB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇦🇺 澳大利亚-2.27MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇨🇳 中国-250.2KB/s(Youtube:不良林), server: 111.45.22.136, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇨🇳 中国-1.10MB/s(Youtube:不良林), server: 120.233.150.146, port: 65024, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-3.02MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.81MB/s(Youtube:不良林), server: 116.129.254.177, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇺🇸 美国-3.58MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-440.4KB/s(Youtube:不良林), server: 111.45.22.136, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
   - {name: 🇨🇳 中国-475.1KB/s(Youtube:不良林), server: 116.129.254.177, port: 65092, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-228.2KB/s(Youtube:不良林), server: cn05.downloadmovie.cn, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn05.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-858.6KB/s(Youtube:不良林), server: cn05.downloadmovie.cn, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn05.downloadmovie.cn}}
   - {name: 🇨🇳 中国-6.42MB/s(Youtube:不良林), server: auto-moble.downloadmovie.cn, port: 65022, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: auto-moble.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-1.04MB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65031, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-1.26MB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65031, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.72MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-250.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-475.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-858.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.72MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-250.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-475.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-858.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.72MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-250.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-475.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-858.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.72MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-250.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-475.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-858.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.72MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-250.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-475.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-858.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.72MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-250.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-475.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-858.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.72MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-250.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-475.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-858.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
