--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,13 +5,13 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-2.01MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-1.10MB/s(Youtube:不良林), server: 120.233.150.146, port: 65024, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇳 中国-3.02MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.81MB/s(Youtube:不良林), server: 116.129.254.177, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇺🇸 美国-3.58MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.85MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-3.74MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.66MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.51MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.29MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
   - {name: 🇨🇳 中国-440.4KB/s(Youtube:不良林), server: 111.45.22.136, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇨🇳 中国-475.1KB/s(Youtube:不良林), server: 116.129.254.177, port: 65092, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-1.90MB/s(Youtube:不良林), server: 116.129.254.177, port: 65092, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇨🇳 中国-858.6KB/s(Youtube:不良林), server: cn05.downloadmovie.cn, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn05.downloadmovie.cn}}
   - {name: 🇨🇳 中国-6.42MB/s(Youtube:不良林), server: auto-moble.downloadmovie.cn, port: 65022, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: auto-moble.downloadmovie.cn}}
   - {name: 🇨🇳 中国-1.26MB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65031, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
@@ -21,13 +21,13 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-440.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-475.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
       - 🇨🇳 中国-858.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
@@ -36,13 +36,13 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-440.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-475.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
       - 🇨🇳 中国-858.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
@@ -52,13 +52,13 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-440.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-475.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
       - 🇨🇳 中国-858.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
@@ -66,19 +66,20 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-3.74MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-440.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-475.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
       - 🇨🇳 中国-858.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
@@ -87,13 +88,13 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-440.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-475.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
       - 🇨🇳 中国-858.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
@@ -103,13 +104,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-440.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-475.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
       - 🇨🇳 中国-858.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
@@ -128,13 +129,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-440.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-475.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
       - 🇨🇳 中国-858.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
